updated index.html and deleted members.html

--- a/teachers.html
+++ b/teachers.html
@@ -59,15 +59,12 @@
       <div class="collapse navbar-collapse " id="navbarNav">
         <ul class="navbar-nav">
           <li class="nav-item active">
-            <a class="nav-link active" href="#about"
+            <a class="nav-link active" href="index.html#about"
               >About Us <span class="sr-only">(current)</span></a
             >
           </li>
           <li class="nav-item">
             <a class="nav-link active" href="teachers.html">Our Teachers</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link active" href="members.html">Team Members</a>
           </li>
         </ul>
       </div>
@@ -109,25 +106,21 @@
           </div>
         </div>
         <div class="row pad1">
-          <div class="col-md-4">
+           <div class="col-md-4">
             <div class="card" style="width: 18rem;">
-              <img
-                src="images/rashmireddy.jpg"
-                class="card-img-top"
-                alt="..."
-              />
+              <img src="images/nagaraj.jpg" class="card-img-top" alt="..." />
               <div class="card-body">
-                <h5 class="card-title">MRS. RASHMI REDDY</h5>
+                <h5 class="card-title">DR. NAGARAJ J</h5>
                 <p class="card-text">
                   Associate Professor<br />
-                  <strong>Qualification : </strong> M. Tech(Ph.D)
+                  <strong>Qualification : </strong> M. Tech,Ph.D
                 </p>
                 <a
-                  href="https://www.dsce.edu.in/images/CSE/faculty/pdf/ProfRashmiReddy.pdf"
+                  href="https://www.dsce.edu.in/images/CSE/faculty/pdf/Nagaraj_j.pdf"
                   class="btn btn-primary"
                   target="blank"
-                  >Read More</a
-                >
+                  >Read More
+                </a>
               </div>
             </div>
           </div>
@@ -245,24 +238,30 @@
               </div>
             </div>
           </div>
+
           <div class="col-md-4">
             <div class="card" style="width: 18rem;">
-              <img src="images/nagaraj.jpg" class="card-img-top" alt="..." />
+              <img
+                src="images/rashmireddy.jpg"
+                class="card-img-top"
+                alt="..."
+              />
               <div class="card-body">
-                <h5 class="card-title">DR. NAGARAJ J</h5>
+                <h5 class="card-title">MRS. RASHMI REDDY</h5>
                 <p class="card-text">
                   Associate Professor<br />
-                  <strong>Qualification : </strong> M. Tech,Ph.D
+                  <strong>Qualification : </strong> M. Tech(Ph.D)
                 </p>
                 <a
-                  href="https://www.dsce.edu.in/images/CSE/faculty/pdf/Nagaraj_j.pdf"
+                  href="https://www.dsce.edu.in/images/CSE/faculty/pdf/ProfRashmiReddy.pdf"
                   class="btn btn-primary"
                   target="blank"
-                  >Read More
-                </a>
+                  >Read More</a
+                >
               </div>
             </div>
           </div>
+
           <div class="col-md-4">
             <div class="card" style="width: 18rem;">
               <img src="images/akshatha.jpg" class="card-img-top" alt="..." />
@@ -308,10 +307,12 @@
           <div class="col-lg-3 col-md-6 footer-contact">
             <h4>Contact Us</h4>
             <p>
-              Shavige Malleshwara Hills,<BR /> 91st Main Rd, <BR /> 1st Stage,
-              <BR /> Kumaraswamy Layout, Bengaluru,<BR />
+              Shavige Malleshwara Hills,<br />
+              91st Main Rd, <br />
+              1st Stage, <br />
+              Kumaraswamy Layout, Bengaluru,<br />
               Karnataka 560078
-              <BR /><br />
+              <br /><br />
               <strong>FAX</strong> + 1 212 963 4260<br />
             </p>
 
