--- a/index.html
+++ b/index.html
@@ -49,9 +49,7 @@
           <li class="nav-item">
             <a class="nav-link active" href="teachers.html">Our Teachers</a>
           </li>
-          <li class="nav-item">
-            <a class="nav-link active" href="members.html">Team Members</a>
-          </li>
+
         </ul>
       </div>
       <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
@@ -82,8 +80,17 @@
     <!-------------------CONTENT-->
 
     <div class="container">
-      <h1 class="text-center c1">Welcome To Proctor Managment System</h2>
+      <div class="row">
+  <div class="col-md-4" style="padding-top: 5%;
+padding-left: 7%;">
+     <img id="dsiimg" src="images/dsi.png" alt="">
+  </div>
+  <div class="col-md-8">
 
+
+      <h1 class="c1">Welcome To Proctor Managment System</h2>
+    </div>
+</div>
    <hr style="margin-top: 1rem;
 margin-bottom: 1rem;
 
