--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@ padding-left: 7%;">
   <div class="col-md-8">
 
 
-      <h1 class="c1">Welcome To Proctor Managment System</h2>
+      <h1 class="c1">Welcome To Proctor Management System</h2>
     </div>
 </div>
    <hr style="margin-top: 1rem;
